Search by title & update docs
